// DBML for the mint_rewards_test MongoDB -> Postgres migration target.
// Source of truth is scripts/migrate-mongo-to-postgres.schema.sql (this
// file is a generated view of it, for diagramming — e.g. paste into
// https://dbdiagram.io). If the two drift, schema.sql wins; regenerate
// this file from it rather than hand-editing around a mismatch.
//
// Table order matches lib/models.ts collection dependency order, the same
// order migrate-mongo-to-postgres.mjs inserts in: a table with a foreign
// key comes after the table(s) it references.
//
// jsonb columns are raw JSON dumps of Mongo array/object fields that have
// no relational target to migrate against — see schema.sql's "ARRAY
// FIELDS" note and scripts/vendor/mongo-to-postgres/NOTICE.md for why they
// exist and what "no relational target" means here. ObjectIds embedded
// inside a jsonb blob (e.g. users.pickup_history entries' collectionId /
// captain) are NOT remapped to the new integer ids and should not be
// joined against collections/captains without a separate remap step.

Project mint_rewards_test {
  database_type: 'PostgreSQL'
  Note: '''
    Migration target for mint-rewards-test (MongoDB -> Postgres), via
    scripts/migrate-mongo-to-postgres.mjs. Excludes the Log collection
    (high-volume, TTL, append-only — not migrated).
  '''
}

Enum org_plan {
  starter
  growth
  enterprise
}

Enum brand_status {
  PENDING
  APPROVED
  REJECTED
}

Enum campaign_status {
  PENDING
  APPROVED
  REJECTED
  EXPIRED
}

Enum collection_status {
  PENDING
  COMPLETED
}

Enum deal_status {
  pending
  active
  rejected
  inactive
  expired
}

Table organizations {
  id integer [pk, increment]
  name text [not null]
  plan org_plan [not null, default: 'starter']
  module_subscriptions jsonb [note: 'jsonb dump — no relational target']
  created_at timestamptz
  updated_at timestamptz

  Note: 'Mongo collection: organizations'
}

Table brandthemes {
  id integer [pk, increment]
  name text [not null]
  logo text [not null]
  background_color text [not null]
  accent_color text [not null]
  status text [not null]

  Note: 'Mongo collection: brandthemes'
}

Table users {
  id integer [pk, increment]
  user_name text [not null]
  email text [not null, unique]
  password text [not null]
  avatar text [not null, default: '']
  address text [not null, default: '']
  province text [not null, default: '']
  city text [not null, default: '']
  town text [not null, default: '']
  town_other text [not null, default: '']
  sub_area text [not null, default: '']
  sub_area_other text [not null, default: '']
  phone text [not null, default: '']
  mint_id text [not null, unique]
  role text [not null, default: 'MEMBER']
  latitude text [not null, default: '']
  longitude text [not null, default: '']
  device_token text [not null, default: '']
  points integer [not null, default: 0]
  total_collections text [not null, default: '']
  total_waste_collected text [not null, default: '']
  referral_reward_granted boolean [not null, default: false]
  referrals jsonb [note: 'jsonb dump — no relational target']
  location jsonb [note: 'single nested object, keys stay camelCase']
  structured_address jsonb [note: 'single nested object, keys stay camelCase']
  location_verification jsonb [note: 'single nested object, keys stay camelCase']
  location_version integer [not null, default: 0]
  location_completed_at timestamptz
  profile_bonus_window_started_at timestamptz
  profile_bonus_granted_at timestamptz
  profile_bonus_points integer
  pickup_history jsonb [note: 'jsonb dump — embedded collectionId/captain ids NOT remapped']
  created timestamptz
  first_time_login boolean [not null, default: true]
  password_reset jsonb [note: 'single nested object, keys stay camelCase']
  email_verification jsonb [note: 'single nested object, keys stay camelCase']
  email_verified boolean [not null, default: false]
  apple_id text [unique]

  Note: 'Mongo collection: users'
}

Table captains {
  id integer [pk, increment]
  name text [not null]
  phone text [not null]
  email text [not null, unique]
  password text [not null]
  avatar text [not null, default: '']
  national_id text
  national_id_image text
  role text [not null, default: 'CAPTAIN']
  device_token text [not null, default: '']
  created timestamptz
  email_verified boolean [not null, default: false]
  verification_token text

  Note: 'Mongo collection: captains'
}

Table logistics {
  id integer [pk, increment]
  name text [not null]
  phone text [not null]
  email text [not null, unique]
  password text [not null]
  avatar text [not null, default: '']
  role text [not null, default: 'LOGISTIC']
  device_token text [not null, default: '']
  created timestamptz
  email_verified boolean [not null, default: false]
  verification_token text

  Note: 'Mongo collection: logistics'
}

Table locations {
  id integer [pk, increment]
  province text [not null]
  cities jsonb [note: 'jsonb dump (nested towns included) — no relational target']

  Note: 'Mongo collection: locations'
}

Table brands {
  id integer [pk, increment]
  org_id integer
  legacy_brand_id integer [note: 'self-reference; may be NULL depending on Mongo return order — see schema.sql']
  company_name text [not null]
  brand_name text [not null]
  email text [not null, unique]
  logo text
  theme_image text
  category text [not null]
  description text [not null, default: '']
  address text [not null, default: '']
  web_link text [not null]
  app_link text [not null, default: '']
  contact_name text [not null]
  phone text [not null]
  registration_number text [not null, unique]
  domain text [not null, default: '']
  theme_color text [not null, default: '#3B82F6']
  status brand_status [not null, default: 'PENDING']
  role text [not null, default: 'BRAND']
  email_verified boolean [not null, default: false]
  verification_token text
  environmental_stats jsonb [note: 'single nested object, keys stay camelCase']
  environmental_periods jsonb [note: 'jsonb dump — no relational target']
  created_at timestamptz
  updated_at timestamptz

  Note: 'Mongo collection: brands'
}

Table campaigns {
  id integer [pk, increment]
  name text [not null]
  start_date text
  end_date text
  is_single_code boolean [not null, default: false]
  discount_percentage text
  discount_codes jsonb [note: 'jsonb dump — no relational target']
  addresses jsonb [note: 'jsonb dump — no relational target']
  status campaign_status [not null, default: 'PENDING']
  brand_id integer [not null]
  brand_registration text [not null, default: '']
  description text
  campaign_type text
  target_audience text
  budget numeric
  background_color text
  badge text
  subtitle text
  banner text

  Note: 'Mongo collection: campaigns. `users` is many-to-many, carried via campaign_users.'
}

Table campaign_users {
  id integer [pk, increment]
  campaign_id integer [not null]
  user_id integer [not null]

  Note: 'Join table for campaigns.users (Mongo array of User refs)'
}

Table collections {
  id integer [pk, increment]
  name text [not null]
  area text [not null]
  city text [not null]
  radius text [not null]
  start_area_lat text [not null]
  start_area_lang text [not null]
  start_date text [not null]
  status collection_status [not null, default: 'PENDING']

  Note: '''
    Mongo collection: collections. `users` and `captainsWithDates` are
    many-to-many, carried via collection_users / collection_captains.
  '''
}

Table collection_users {
  id integer [pk, increment]
  collection_id integer [not null]
  user_id integer [not null]

  Note: 'Join table for collections.users (Mongo array of User refs)'
}

Table collection_captains {
  id integer [pk, increment]
  collection_id integer [not null]
  captain_id integer [not null]
  date text [not null]

  Note: 'Join table for collections.captainsWithDates (Mongo array of {captain, date})'
}

Table deals {
  id integer [pk, increment]
  brand_id integer [not null]
  title text [not null]
  description text [not null, default: '']
  discount_percentage numeric
  discount_amount numeric
  codes jsonb [note: 'jsonb dump — no relational target']
  promo_code text
  start_date text
  end_date text
  max_uses integer
  current_uses integer [not null, default: 0]
  minimum_purchase numeric
  status deal_status [not null, default: 'pending']
  created_at timestamptz
  updated_at timestamptz

  Note: 'Mongo collection: deals. `users` and `claims` are many-to-many, carried via deal_users / deal_claims.'
}

Table deal_users {
  id integer [pk, increment]
  deal_id integer [not null]
  user_id integer [not null]

  Note: 'Join table for deals.users (Mongo array of User refs)'
}

Table deal_claims {
  id integer [pk, increment]
  deal_id integer [not null]
  user_id integer [not null]
  code text [not null]
  claimed_at timestamptz

  Note: 'Join table for deals.claims (Mongo array of {user, code, claimedAt})'
}

Table brandusers {
  id integer [pk, increment]
  org_id integer [not null]
  email text [not null, unique]
  password_hash text [not null]
  org_role text [not null]
  module_access jsonb [note: 'jsonb dump — no relational target']
  created_at timestamptz
  updated_at timestamptz

  Note: 'Mongo collection: brandusers'
}

Ref: brands.org_id > organizations.id
Ref: brands.legacy_brand_id > brands.id

Ref: campaigns.brand_id > brands.id
Ref: campaign_users.campaign_id > campaigns.id
Ref: campaign_users.user_id > users.id

Ref: collection_users.collection_id > collections.id
Ref: collection_users.user_id > users.id
Ref: collection_captains.collection_id > collections.id
Ref: collection_captains.captain_id > captains.id

Ref: deals.brand_id > brands.id
Ref: deal_users.deal_id > deals.id
Ref: deal_users.user_id > users.id
Ref: deal_claims.deal_id > deals.id
Ref: deal_claims.user_id > users.id

Ref: brandusers.org_id > organizations.id
